5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4355/executions/1577_1326.log
== TEST (2019-03-14 19:16:48) 
-- CODE:
40
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:16:50) 
-- CODE:
40
-- EXECUTION TIME:
0.159736
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:17:22) 
-- CODE:
40$ - 35$
-- ERROR:
File "XXXX", line 1
    40$ - 35$
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:17:24) 
-- CODE:
40$ - 35$
-- EXECUTION TIME:
0.206914
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    40$ - 35$
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:17:25) 
-- CODE:
40$ - 35$
-- ERROR:
File "XXXX", line 1
    40$ - 35$
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:17:25) 
-- CODE:
40$ - 35$
-- EXECUTION TIME:
0.109598
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    40$ - 35$
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:17:40) 
-- CODE:
40$ - 35$
-- ERROR:
File "XXXX", line 1
    40$ - 35$
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:17:40) 
-- CODE:
40$ - 35$
-- EXECUTION TIME:
0.155384
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    40$ - 35$
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:17:40) 
-- CODE:
40$ - 35$
-- EXECUTION TIME:
0.125129
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    40$ - 35$
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:18:31) 
-- CODE:
print (40-35)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:32) 
-- CODE:
print (40-35)
-- EXECUTION TIME:
0.1284
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:18:42) 
-- CODE:
print (40$-35$)
-- ERROR:
File "XXXX", line 1
    print (40$-35$)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:43) 
-- CODE:
print (40$-35$)
-- EXECUTION TIME:
0.112606
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print (40$-35$)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:18:53) 
-- CODE:
print (40$ - 35$)
-- ERROR:
File "XXXX", line 1
    print (40$ - 35$)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:55) 
-- CODE:
print (40$ - 35$)
-- EXECUTION TIME:
0.153149
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print (40$ - 35$)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:19:07) 
-- CODE:
print ( 40$ - 35$ )
-- ERROR:
File "XXXX", line 1
    print ( 40$ - 35$ )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:10) 
-- CODE:
print ( 40$ - 35$ )
-- EXECUTION TIME:
0.194192
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print ( 40$ - 35$ )
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:19:11) 
-- CODE:
print ( 40$ - 35$ )
-- ERROR:
File "XXXX", line 1
    print ( 40$ - 35$ )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:12) 
-- CODE:
print ( 40$ - 35$ )
-- EXECUTION TIME:
0.129575
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print ( 40$ - 35$ )
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:19:29) 
-- CODE:
print ( 75 )
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:31) 
-- CODE:
print ( 75 )
-- EXECUTION TIME:
0.109649
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
